Fix mint fungible test for modularized (#10479)
This PR fixes failing `I mint FUNGIBLE token and get the total supply
and balance`. Based on the contract method implementation for fungible we should not
pass any metadata in the function parameter otherwise the call goes
through erc720 intertace and fails the test. Now just passing empty
metadata for fungible call.

---------

Signed-off-by: Kristiyan Selveliev <kristiyan.selveliev@limechain.tech>